restructure the code inside the 'main.scss' file to be divided between different folders and files, and import them in. This helps with readability, maintenance of code, and it reaches the so called correct architecture for sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,199 +1,14 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+@import "base/base";
+@import "base/animations";
+@import "base/typography";
+@import "base/utilities";
 
-html {
-  font-size: 62.5%; /* 10px */
-}
+@import "components/button";
 
-body {
-  box-sizing: border-box;
+@import "layout/header";
 
-  color: $color-grey-dark;
-
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-
-  line-height: 1.7;
-  padding: 3rem;
-}
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-      to right,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
-    url("../img/hero.jpg");
-  background-size: cover;
-  background-position: top;
-
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-
-  &__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-
-  backface-visibility: hidden;
-
-  margin-bottom: 6rem;
-
-  &--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-  }
-
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75remrem;
-
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    position: relative;
-    display: inline-block;
-
-    text-transform: uppercase;
-    text-decoration: none;
-
-    padding: 1.5rem 4rem;
-    border-radius: 10rem;
-
-    font-size: 1.6rem;
-
-    transition: all 0.2s;
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba($color-black, 0.2);
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    transition: 0.4s;
-  }
-
-  &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-
-  &--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
+@import "pages/home";
